# onenote-mcp

./: .gitignore  README.md  check_state.py  onenote_mcp.py  organize_notebooks.py  pyproject.toml  reorganize.py  requirements.txt
onenote_lib/: com_client.py  config.py  image_handler.py  vision.py  xml_parser.py
tests/: test_xml_parser.py
